--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -71,7 +71,8 @@ body {
 
 .player-icon,
 .slider-icon,
-.change-quote {
+.change-quote,
+.settings-icon {
   width: 32px;
   height: 32px;
   background-size: 32px 32px;
@@ -87,13 +88,15 @@ body {
 
 .player-icon:hover,
 .slider-icon:hover,
-.change-quote:hover {
+.change-quote:hover,
+.settings-icon:hover {
   opacity: 1;
 }
 
 .player-icon:active,
 .slider-icon:active,
-.change-quote:active {
+.change-quote:active,
+.settings-icon:active {
   border: 0;
   outline: 0;
   transform: scale(1.1);
@@ -262,6 +265,62 @@ body {
 
 .author {
   min-height: 20px;
+}
+
+.settings {
+  background-image: url('../assets/svg/settings.svg');
+}
+
+.extra {
+  width: 100%;
+  min-height: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.callout {
+  width: 250px;
+  height: 110px;
+  position: absolute;
+  left: 25px;
+  bottom: 60px;
+  display: none;
+  flex-direction: column;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.callout-item {
+  width: 100%;
+  height: 50%;
+  background-color: #212121;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.callout-item:hover {
+  background-color: #484848;
+}
+
+.callout-item-header-lang,
+.callout-item-header-api {
+  position: relative;
+  top: 5px;
+  left: 8px;
+  font-weight: bold;
+  font-size: 10pt;
+  color: #ffffff;
+}
+
+.callout-item-content {
+  position: relative;
+  bottom: 5px;
+  left: 14px;
+  font-size: 9pt;
+  letter-spacing: 0.3pt;
 }
 
 @media (max-width: 768px) {
