--- a/art-quiz/src/pages/Home/Home.css
+++ b/art-quiz/src/pages/Home/Home.css
@@ -11,7 +11,7 @@
   width: 32px;
   height: 32px;
   background-size: 32px 32px;
-  background-image: url('../../assets/svg/settings.svg');
+  background-image: url('@/assets/svg/settings.svg');
   cursor: pointer;
 }
 
@@ -27,11 +27,6 @@
   width: 100%;
   height: 40vh;
   min-height: 380px;
-}
-
-.app-name {
-  font-size: 80px;
-  font-family: 'Gilroy-Bold';
 }
 
 .start-buttons-container {
@@ -51,27 +46,10 @@
   line-height: 68px;
   text-align: center;
   border: 0;
+  text-decoration:none;
   color: black;
 }
 
 .start-button:hover {
   opacity: 0.7;
-}
-
-.home-footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  width: 100%;
-  height: 30vh;
-  min-height: 220px;
-  padding: 0 28px 28px;
-}
-
-.school-logo {
-  margin-bottom: -28px;
-  width: 100px;
-  height: 100px;
-  background-size: 100px 100px;
-  background-image: url('../../assets/svg/school-logo.svg');
 }
