--- a/art-quiz/src/components/Footer/Footer.css
+++ b/art-quiz/src/components/Footer/Footer.css
@@ -3,15 +3,15 @@
   justify-content: space-between;
   align-items: flex-end;
   width: 100%;
-  height: 30vh;
+  height: 20vh;
   min-height: 220px;
-  padding: 0 28px 28px;
+  padding: 28px;
 }
 
 .school-logo {
-  width: 100px;
-  height: 100px;
-  background-size: 100px 100px;
+  width: 80px;
+  height: 80px;
+  background-size: 80px 80px;
   background-image: url('@/assets/svg/school-logo.svg');
-  margin-bottom: -28px;
+  margin-bottom: -22px;
 }
