--- a/art-quiz/src/components/Footer/Footer.html
+++ b/art-quiz/src/components/Footer/Footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
   <div class="school-logo"></div>
-  <span>2021</span>
-  <a href="https://rs.school/js">CURSE</a>
+  <span class="release-year">2021</span>
+  <a class="school-reference" href="https://rs.school/js">CURSE</a>
 </footer>
