--- a/art-quiz/src/pages/Home/Home.css
+++ b/art-quiz/src/pages/Home/Home.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: flex-end;
   width: 100%;
-  height: 30vh;
+  height: 20vh;
   min-height: 220px;
-  padding: 56px 56px 0 0;
+  padding: 56px;
 }
 
 .settings-button {
@@ -25,8 +25,44 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 40vh;
-  min-height: 380px;
+  height: 60vh;
+  min-height: 480px;
+  padding: 100px 0;
+}
+
+.big-app-logo {
+  display: flex;
+  align-items: center;
+  margin-left: 180px;
+}
+
+.big-app-logo .icon {
+  display: flex;
+  margin-left: -180px;
+  margin-right: 60px;
+}
+
+.big-app-logo .icon div {
+  width: 130px;
+  height: 130px;
+  border: 1px solid white;
+  border-radius: 100px;
+  margin-right: -60px;
+}
+
+.big-app-logo .text {
+  display: flex;
+  margin-left: -180px;
+}
+
+.big-app-logo .text span {
+  font-size: 100px;
+  font-family: 'Gilroy-Bold';
+}
+
+.big-app-logo .text span:first-child {
+  margin-right: 20px;
+  color: #ffbca2;
 }
 
 .start-buttons-container {
