--- a/art-quiz/src/pages/Settings/Settings.css
+++ b/art-quiz/src/pages/Settings/Settings.css
@@ -1,47 +1,35 @@
 .settings-header {
   display: flex;
-  justify-content: flex-start;
+  align-items: flex-start;
   width: 100%;
-  height: 25vh;
-  min-height: 200px;
-  padding: 56px 0 0 56px;
+  height: 20vh;
+  min-height: 220px;
+  padding: 56px;
 }
 
-.arrow-back-button {
-  width: 32px;
-  height: 32px;
-  background-size: 32px 32px;
-  background-image: url('@/assets/img/arrow-back.png');
-  cursor: pointer;
-}
-
-.arrow-back-button:hover {
-  opacity: 0.7;
-}
-
-.page-header {
-  margin: 3px 0 0 10px;
+.aligning-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .settings-main {
-  width: 100%;
-  height: 45vh;
-  min-height: 400px;
-}
-
-.settings-container {
-  padding-left: 56px;
-  margin-top: -56px;
-}
-
-.setting-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  width: 100%;
+  height: 60vh;
+  min-height: 480px;
+  padding-left: 56px;
+}
+
+.setting {
+  display: flex;
+  flex-direction: column;
   margin-top: 56px;
 }
 
-.setting-header {
+.setting .header {
   font-family: 'Gilroy-Bold';
   font-size: 24px;
   color: white;
@@ -68,22 +56,21 @@
   box-shadow: -500px 0 0 500px #ffbca2;
 }
 
-.toggle-container {
+.toggle {
   display: flex;
   align-items: center;
   margin-top: 40px;
 }
 
-.toggle-value-container {
+.toggle .value-container {
   width: 24px;
 }
 
-.toggle-value {
+.toggle .value {
   font-size: 16px;
 }
 
-/* The switch - the box around the slider */
-.toggle-switch {
+.switch {
   position: relative;
   display: inline-block;
   width: 50px;
@@ -91,14 +78,12 @@
   margin-left: 5px;
 }
 
-/* Hide default HTML checkbox */
-.toggle-switch input {
+.switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-/* The slider */
 .slider {
   position: absolute;
   cursor: pointer;
@@ -137,7 +122,6 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-/* Rounded sliders */
 .slider.round {
   border-radius: 34px;
 }
@@ -146,13 +130,13 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
-.circles-container {
+.round-buttons-container {
   display: flex;
   align-items: center;
   margin-top: 40px;
 }
 
-.curcle-button {
+.round-button {
   width: 24px;
   height: 24px;
   background-size: 32px 32px;
@@ -162,21 +146,21 @@ input:checked + .slider:before {
   cursor: pointer;
 }
 
-.plus {
+.round-button.plus {
   background-image: url('@/assets/img/plus.png');
 }
 
-.minus {
+.round-button.minus {
   margin-left: 15px;
   background-image: url('@/assets/img/minus.png');
 }
 
-.plus:active,
-.minus:active {
+.round-button.plus:active,
+.round-button.minus:active {
   transform: scale(1.2);
 }
 
-.number {
+.counter {
   margin-left: 15px;
 }
 
