--- a/art-quiz/src/components/BackButton/BackButton.css
+++ b/art-quiz/src/components/BackButton/BackButton.css
@@ -3,7 +3,7 @@
   align-items: center;
 }
 
-.back-button a {
+.back-button .icon {
   margin-right: 5px;
   width: 32px;
   height: 32px;
@@ -12,6 +12,6 @@
   cursor: pointer;
 }
 
-.back-button a:hover {
+.back-button .icon:hover {
   opacity: 0.7;
 }
