--- a/art-quiz/src/pages/Home/Home.css
+++ b/art-quiz/src/pages/Home/Home.css
@@ -3,7 +3,7 @@
   justify-content: flex-end;
   width: 100%;
   height: 20vh;
-  min-height: 220px;
+  min-height: 180px;
   padding: 56px;
 }
 
@@ -26,7 +26,7 @@
   align-items: center;
   width: 100%;
   height: 60vh;
-  min-height: 480px;
+  min-height: 440px;
   padding: 100px 0;
 }
 
@@ -82,10 +82,27 @@
   line-height: 68px;
   text-align: center;
   border: 0;
-  text-decoration:none;
+  text-decoration: none;
   color: black;
 }
 
 .start-button:hover {
   opacity: 0.7;
+}
+
+.pages-container {
+  display: flex;
+  width: 200%;
+  height: 100%;
+  transition: 500ms;
+  margin-left: 0;
+}
+
+.page {
+  height: 100%;
+  width: 50%
+}
+
+.home-is-active {
+  margin-left: 0;
 }
