--- a/art-quiz/src/pages/Settings/Settings.css
+++ b/art-quiz/src/pages/Settings/Settings.css
@@ -3,7 +3,7 @@
   align-items: flex-start;
   width: 100%;
   height: 20vh;
-  min-height: 220px;
+  min-height: 180px;
   padding: 56px;
 }
 
@@ -19,7 +19,7 @@
   flex-direction: column;
   width: 100%;
   height: 60vh;
-  min-height: 480px;
+  min-height: 440px;
   padding-left: 56px;
 }
 
@@ -164,5 +164,8 @@ input:checked + .slider:before {
   margin-left: 15px;
 }
 
+.settings-is-active {
+  margin-left: -100%;
+}
 
 
