--- a/art-quiz/src/pages/Home/Home.css
+++ b/art-quiz/src/pages/Home/Home.css
@@ -1,10 +1,17 @@
 .home-header {
   display: flex;
-  justify-content: flex-end;
+  align-items: flex-start;
   width: 100%;
   height: 20vh;
   min-height: 180px;
   padding: 56px;
+}
+
+.aligning-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .settings-button {
@@ -90,7 +97,7 @@
   opacity: 0.7;
 }
 
-.pages-container {
+.slider {
   display: flex;
   width: 200%;
   height: 100%;
@@ -98,11 +105,11 @@
   margin-left: 0;
 }
 
-.page {
+.slide {
   height: 100%;
   width: 50%
 }
 
-.home-is-active {
-  margin-left: 0;
+.moved {
+  margin-left: -100%;
 }
