--- a/art-quiz/src/pages/Settings/Settings.css
+++ b/art-quiz/src/pages/Settings/Settings.css
@@ -84,7 +84,7 @@
   height: 0;
 }
 
-.slider {
+.slide-block {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -96,7 +96,7 @@
   transition: 0.2s;
 }
 
-.slider:before {
+.slide-block:before {
   position: absolute;
   content: '';
   height: 18px;
@@ -108,25 +108,25 @@
   transition: 0.2s;
 }
 
-input:checked + .slider {
+input:checked + .slide-block {
   background-color: #ffbca2;
 }
 
-input:focus + .slider {
+input:focus + .slide-block {
   box-shadow: 0 0 1px #ffbca2;
 }
 
-input:checked + .slider:before {
+input:checked + .slide-block:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
 
-.slider.round {
+.slide-block.round {
   border-radius: 34px;
 }
 
-.slider.round:before {
+.slide-block.round:before {
   border-radius: 50%;
 }
 
@@ -162,10 +162,6 @@ input:checked + .slider:before {
 
 .counter {
   margin-left: 15px;
-}
-
-.settings-is-active {
-  margin-left: -100%;
 }
 
 
