--- a/art-quiz/src/styles/styles.css
+++ b/art-quiz/src/styles/styles.css
@@ -24,7 +24,7 @@ body {
   overflow: hidden;
 }
 
-/* .transition-1 {
+.transition {
   position: fixed;
   top: 0;
   right: 0;
@@ -32,12 +32,26 @@ body {
   bottom: 0;
   z-index: 1;
   background-color: black;
-  pointer-events: none;
   opacity: 0;
   transition: 500ms ease-out;
+  pointer-events: none;
 }
 
-.transition-1.is-active {
+.transition.active {
   pointer-events: all;
   opacity: 1;
-} */
+}
+
+
+.transition2 {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  transition: 500ms;
+  transform: translateX(0);
+}
+
+.transition2.active {
+  transform: translateX(-100%);
+}
+
