--- a/art-quiz/src/pages/Questions/Questions.css
+++ b/art-quiz/src/pages/Questions/Questions.css
@@ -3,22 +3,25 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 20vh;
-  min-height: 180px;
-  padding: 0 72px 72px;
+  height: 12vh;
+  min-height: 130px;
+  /* padding: 0 72px 72px; */
 }
 
 .questions-main {
   width: 100%;
-  height: 60vh;
+  height: 68vh;
   min-height: 440px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .questions-progress {
   -webkit-appearance: none;
   appearance: none;
   overflow: hidden;
-  width: 800px;
+  width: 600px;
   height: 5px;
   background-color: white;
   border-radius: 20px;
