--- a/art-quiz/src/components/Footer/Footer.css
+++ b/art-quiz/src/components/Footer/Footer.css
@@ -3,9 +3,9 @@
   justify-content: space-between;
   align-items: flex-end;
   width: 100%;
-  height: 20vh;
-  min-height: 180px;
-  padding: 0 24px 24px;
+  height: 15vh;
+  min-height: 100px;
+  padding: 0 20px
 }
 
 .school-logo {
@@ -13,5 +13,5 @@
   height: 80px;
   background-size: 80px 80px;
   background-image: url('@/assets/svg/school-logo.svg');
-  margin-bottom: -24px;
+  margin-bottom: -20px;
 }
