--- a/art-quiz/src/pages/Categories/Categories.css
+++ b/art-quiz/src/pages/Categories/Categories.css
@@ -3,9 +3,9 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 20vh;
-  min-height: 180px;
-  padding: 0 72px 72px;
+  height: 15vh;
+  min-height: 100px;
+  padding: 0 70px;
 }
 
 .page-header {
@@ -25,10 +25,10 @@
 
 .categories-main {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
-  height: 60vh;
-  min-height: 440px;
+  height: 70vh;
+  min-height: 500px;
 }
