--- a/art-quiz/src/pages/Home/Home.css
+++ b/art-quiz/src/pages/Home/Home.css
@@ -3,9 +3,9 @@
   align-items: center;
   justify-content: flex-end;
   width: 100%;
-  height: 20vh;
-  min-height: 180px;
-  padding: 0 72px 72px;
+  height: 15vh;
+  min-height: 100px;
+  padding: 0 70px;
 }
 
 .settings-button {
@@ -26,8 +26,8 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 60vh;
-  min-height: 440px;
+  height: 70vh;
+  min-height: 500px;
   padding: 100px 0;
 }
 
