--- a/art-quiz/src/pages/Questions/Questions.css
+++ b/art-quiz/src/pages/Questions/Questions.css
@@ -3,18 +3,9 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 12vh;
-  min-height: 130px;
-  /* padding: 0 72px 72px; */
-}
-
-.questions-main {
-  width: 100%;
-  height: 68vh;
-  min-height: 440px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: 15vh;
+  min-height: 100px;
+  padding: 0 70px;
 }
 
 .questions-progress {
@@ -34,4 +25,109 @@
   width: 0;
   height: 5px;
   box-shadow: -500px 0 0 500px #ffbca2;
+}
+
+.questions-main {
+  width: 100%;
+  height: 70vh;
+  min-height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.question {
+  height: 100%;
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: 500ms;
+  transform: translateX(0%);
+}
+
+.question .text {
+  font-size: 26px;
+}
+
+.question .image {
+  width: 100%;
+  height: 400px;
+  background-position: center center;
+  background-size: 100% 400px;
+  border-radius: 20px;
+}
+
+.answer-buttons-container {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.answer-button {
+  width: 45%;
+  height: 60px;
+  margin: auto;
+  background-color: #ffbca2;
+  border-radius: 40px;
+  line-height: 56px;
+  text-align: center;
+  cursor: pointer;
+  color: black;
+}
+
+.answer-button:hover {
+  opacity: 0.7;
+}
+
+.moved-left {
+  transform: translateX(-300%);
+}
+
+.answer {
+  position: absolute;
+  padding: 20px;
+  background-color: white;
+  height: 600px;
+  width: 500px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: 500ms;
+  transform: translateX(300%);
+}
+
+.answer .text {
+  font-size: 26px;
+}
+
+.answer .image {
+  width: 100%;
+  height: 350px;
+  background-position: center center;
+  background-size: 100% 350px;
+  border-radius: 20px;
+  background-image: url('@/data/full/0full.jpg');
+}
+
+.next-button {
+  width: 45%;
+  height: 60px;
+  margin: auto;
+  background-color: #ffbca2;
+  border-radius: 40px;
+  line-height: 56px;
+  text-align: center;
+  cursor: pointer;
+  color: black;
+}
+
+.next-button:hover {
+  opacity: 0.7;
+}
+
+.moved-right {
+  transform: translateX(0%);
 }
