--- a/art-quiz/src/pages/Settings/Settings.css
+++ b/art-quiz/src/pages/Settings/Settings.css
@@ -3,18 +3,18 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 20vh;
-  min-height: 180px;
-  padding: 0 72px 72px;
+  height: 15vh;
+  min-height: 100px;
+  padding: 0 70px;
 }
 
 .settings-main {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 60vh;
-  min-height: 440px;
-  padding-left: 72px;
+  height: 70vh;
+  min-height: 500px;
+  padding-left: 70px;
 }
 
 .setting {
