--- a/art-quiz/src/pages/Home/Home.css
+++ b/art-quiz/src/pages/Home/Home.css
@@ -27,7 +27,7 @@
   align-items: center;
   width: 100%;
   height: 70vh;
-  min-height: 500px;
+  min-height: 700px;
   padding: 100px 0;
 }
 
@@ -75,7 +75,6 @@
 .start-button {
   width: 300px;
   height: 72px;
-  background-size: 300px 72px;
   background-color: #ffbca2;
   cursor: pointer;
   border-radius: 40px;
@@ -98,7 +97,7 @@
 
 .slide {
   height: 100%;
-  width: 50%
+  width: 50%;
 }
 
 .moved {
