--- a/art-quiz/src/pages/Settings/Settings.css
+++ b/art-quiz/src/pages/Settings/Settings.css
@@ -56,18 +56,18 @@
   margin-top: 40px;
 }
 
-.toggle .value-container {
+.value-container {
   width: 58px;
 }
 
-.switch {
+.toggle label {
   position: relative;
   display: inline-block;
   width: 50px;
   height: 24px;
 }
 
-.switch input {
+.toggle input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -125,7 +125,8 @@ input:checked + .slide-block:before {
   margin-top: 40px;
 }
 
-.round-button {
+.round-button-plus,
+.round-button-minus {
   width: 24px;
   height: 24px;
   background-size: 32px 32px;
@@ -135,22 +136,25 @@ input:checked + .slide-block:before {
   cursor: pointer;
 }
 
-.round-button.plus {
+.round-button-plus:active,
+.round-button-minus:active {
+  transform: scale(1.2);
+}
+
+.round-button-plus {
   background-image: url('@/assets/img/plus.png');
 }
 
-.round-button.minus {
+.round-button-minus {
   margin-left: 15px;
   background-image: url('@/assets/img/minus.png');
 }
 
-.round-button.plus:active,
-.round-button.minus:active {
-  transform: scale(1.2);
-}
-
-.counter {
+.counter-container {
   margin-left: 15px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
 }
 
 
