--- a/christmas-task/src/index.scss
+++ b/christmas-task/src/index.scss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Neucha&family=Open+Sans&display=swap');
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Neucha', sans-serif;
   color: #fff;
 }
