--- a/christmas-task/src/components/Background/Background.scss
+++ b/christmas-task/src/components/Background/Background.scss
@@ -3,7 +3,6 @@
   width: 60px;
   border-radius: 10px;
   background-position: center center;
-  background-size: 60px 60px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-size: 100% 100%;
   cursor: pointer;
 }
