--- a/christmas-task/src/components/Tree/Tree.scss
+++ b/christmas-task/src/components/Tree/Tree.scss
@@ -1,9 +1,9 @@
 .tree {
-  height: 120px;
-  width: 120px;
+  height: 100px;
+  width: 100px;
   border-radius: 10px;
   background-position: center center;
-  background-size: 120px 120px;
+  background-size: 100% 100%;
   background-color: rgba(255, 255, 255, 0.5);
   cursor: pointer;
 }
