--- a/christmas-task/src/view/Home/Home.scss
+++ b/christmas-task/src/view/Home/Home.scss
@@ -1,3 +1,10 @@
+.home {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: calc(100vh - 180px);
+}
+
 .ball1 {
   position: absolute;
   top: 200px;
@@ -41,15 +48,10 @@
 }
 
 .container {
-  width: 100%;
-  height: 100%;
-  min-height: 500px;
-  align-self: center;
   display: flex;
   flex-direction: column;
-  gap: 60px;
   align-items: center;
-  justify-content: center;
+  gap: 60px;
 }
 
 .title {
@@ -58,13 +60,13 @@
   justify-content: center;
   width: 520px;
   height: 250px;
-  border: 3px solid #278d9f;
-  border-radius: 25px;
+  border-radius: 20px;
   background-color: rgba(31, 112, 127, 0.3);
   backdrop-filter: blur(6px);
   font-weight: 400;
   font-size: 56px;
   text-align: center;
+  pointer-events: none;
 }
 
 .button {
@@ -73,12 +75,11 @@
   justify-content: center;
   width: 260px;
   height: 60px;
-  border: 3px solid #278d9f;
   border-radius: 30px;
   background-color: rgba(31, 112, 127, 0.3);
   backdrop-filter: blur(6px);
   font-weight: 300;
-  font-size: 26px;
+  font-size: 28px;
   text-align: center;
   cursor: pointer;
   outline: 1px solid;
