--- a/christmas-task/src/components/OvalButton/OvalButton.scss
+++ b/christmas-task/src/components/OvalButton/OvalButton.scss
@@ -9,3 +9,11 @@
   backdrop-filter: blur(6px);
   cursor: pointer;
 }
+
+.oval-button:hover {
+  opacity: 0.8;
+}
+
+.oval-button:active {
+  background-color: rgba(31, 112, 127, 0.5);
+}
