--- a/christmas-task/src/view/Toys/Toys.scss
+++ b/christmas-task/src/view/Toys/Toys.scss
@@ -7,20 +7,22 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
-  max-width: 400px;
   min-width: 400px;
+  overflow: auto;
+}
+
+.settings::-webkit-scrollbar {
+  display: none;
 }
 
 .header {
   margin-top: 20px;
   font-size: 24px;
   text-transform: uppercase;
-  pointer-events: none;
 }
 
 .subheader {
   margin-top: 20px;
-  pointer-events: none;
 }
 
 .filters {
@@ -34,7 +36,7 @@
   flex-wrap: wrap;
   align-content: flex-start;
   gap: 10px;
-  padding: 10px;
+  padding: 20px;
   overflow: auto;
 }
 
