--- a/christmas-task/src/App.scss
+++ b/christmas-task/src/App.scss
@@ -15,7 +15,7 @@
   margin-left: 30px;
 }
 
-.nav-item {
+.nav-link {
   text-decoration: none;
   font-size: 28px;
   line-height: 2;
@@ -25,7 +25,7 @@
   border-bottom: 3px solid transparent;
 }
 
-.nav-item:hover {
+.nav-link:hover {
   color: #278d9f;
 }
 
