--- a/christmas-task/src/components/Card/Card.scss
+++ b/christmas-task/src/components/Card/Card.scss
@@ -7,8 +7,8 @@
   height: 400px;
   padding: 20px;
   border-radius: 10px;
-  background-color: rgba(31, 112, 127, 0.3);
   backdrop-filter: blur(6px);
+  cursor: pointer;
 }
 
 .image {
