--- a/christmas-task/src/view/Trees/Trees.scss
+++ b/christmas-task/src/view/Trees/Trees.scss
@@ -3,7 +3,7 @@
   min-height: calc(100vh - 180px);
 }
 
-.settings-header {
+.header {
   margin-top: 20px;
   font-size: 24px;
   text-transform: uppercase;
