--- a/christmas-task/src/App.scss
+++ b/christmas-task/src/App.scss
@@ -50,3 +50,11 @@
   height: 60px;
   width: 70px;
 }
+
+.toys-count {
+  width: 250px;
+  text-decoration: none;
+  font-size: 28px;
+  line-height: 2;
+  text-transform: uppercase;
+}
