--- a/christmas-task/src/view/Trees/Trees.scss
+++ b/christmas-task/src/view/Trees/Trees.scss
@@ -16,12 +16,12 @@
   flex-basis: 0;
   padding: 20px;
   max-width: 400px;
-  overflow: auto;
 }
 
 .buttons {
   display: flex;
-  gap: 30px;
+  gap: 20px;
+  flex-wrap: wrap;
 }
 
 .settings {
