--- a/art-quiz/src/components/BigAppLogo/BigAppLogo.css
+++ b/art-quiz/src/components/BigAppLogo/BigAppLogo.css
@@ -1,35 +1,34 @@
-.app-logo {
+.big-app-logo {
   display: flex;
   align-items: center;
-  margin-left: 85px;
-  cursor: pointer;
+  margin-left: 180px;
 }
 
 .icon {
   display: flex;
-  margin-left: -85px;
-  margin-right: 20px;
+  margin-left: -180px;
+  margin-right: 60px;
 }
 
 .icon div {
-  width: 60px;
-  height: 60px;
+  width: 130px;
+  height: 130px;
   border: 1px solid white;
   border-radius: 100px;
-  margin-right: -20px;
+  margin-right: -60px;
 }
 
 .text {
   display: flex;
-  margin-left: -85px;
+  margin-left: -180px;
 }
 
 .text span {
-  font-size: 40px;
+  font-size: 100px;
   font-family: 'Gilroy-Bold';
 }
 
 .text span:first-child {
-  margin-right: 10px;
+  margin-right: 20px;
   color: #ffbca2;
 }
