--- a/art-quiz/src/components/Footer/Footer.css
+++ b/art-quiz/src/components/Footer/Footer.css
@@ -5,13 +5,13 @@
   width: 100%;
   height: 15vh;
   min-height: 100px;
-  padding: 0 20px
+  padding: 20px;
 }
 
-.school-logo {
+.logo {
   width: 80px;
   height: 80px;
-  background-size: 80px 80px;
+  background-size: 100% 100%;
   background-image: url('@/assets/svg/school-logo.svg');
   margin-bottom: -20px;
 }
