--- a/art-quiz/src/components/IconButton/IconButton.css
+++ b/art-quiz/src/components/IconButton/IconButton.css
@@ -1,17 +1,16 @@
-.back-button {
+.icon-button {
   display: flex;
   align-items: center;
+  gap: 5px;
 }
 
-.back-button .icon {
-  margin-right: 5px;
+.icon {
   width: 32px;
   height: 32px;
   background-size: 32px 32px;
-  background-image: url('@/assets/img/arrow-back.png');
   cursor: pointer;
 }
 
-.back-button .icon:hover {
+.back-button:hover {
   opacity: 0.7;
 }
