--- a/art-quiz/src/pages/Categories/Categories.css
+++ b/art-quiz/src/pages/Categories/Categories.css
@@ -1,4 +1,4 @@
-.categories-header {
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -22,13 +22,14 @@
   align-items: flex-start;
 }
 
-
-.categories-main {
+.main {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-content: flex-start;
   flex-wrap: wrap;
+  gap: 60px;
   width: 100%;
   height: 70vh;
   min-height: 700px;
+  padding: 0 70px;
 }
