--- a/art-quiz/src/pages/Home/Home.css
+++ b/art-quiz/src/pages/Home/Home.css
@@ -1,4 +1,4 @@
-.home-header {
+.header {
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -20,7 +20,7 @@
   opacity: 0.7;
 }
 
-.home-main {
+.main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -31,75 +31,7 @@
   padding: 100px 0;
 }
 
-.big-app-logo {
-  display: flex;
-  align-items: center;
-  margin-left: 180px;
-}
-
-.big-app-logo .icon {
-  display: flex;
-  margin-left: -180px;
-  margin-right: 60px;
-}
-
-.big-app-logo .icon div {
-  width: 130px;
-  height: 130px;
-  border: 1px solid white;
-  border-radius: 100px;
-  margin-right: -60px;
-}
-
-.big-app-logo .text {
-  display: flex;
-  margin-left: -180px;
-}
-
-.big-app-logo .text span {
-  font-size: 100px;
-  font-family: 'Gilroy-Bold';
-}
-
-.big-app-logo .text span:first-child {
-  margin-right: 20px;
-  color: #ffbca2;
-}
-
 .start-buttons-container {
   display: flex;
-  justify-content: space-between;
-  min-width: 700px;
-}
-
-.start-button {
-  width: 300px;
-  height: 72px;
-  background-color: #ffbca2;
-  cursor: pointer;
-  border-radius: 40px;
-  line-height: 68px;
-  text-align: center;
-  color: black;
-}
-
-.start-button:hover {
-  opacity: 0.7;
-}
-
-.slider {
-  display: flex;
-  width: 200%;
-  height: 100%;
-  transition: 500ms;
-  margin-left: 0;
-}
-
-.slide {
-  height: 100%;
-  width: 50%;
-}
-
-.moved {
-  margin-left: -100%;
+  gap: 200px;
 }
