--- a/art-quiz/src/pages/Questions/Questions.css
+++ b/art-quiz/src/pages/Questions/Questions.css
@@ -1,4 +1,4 @@
-.questions-header {
+.header {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,44 +8,13 @@
   padding: 0 70px;
 }
 
-.progress {
-  -webkit-appearance: none;
-  appearance: none;
-  overflow: hidden;
-  width: 660px;
-  height: 5px;
-  background-color: white;
-  border-radius: 20px;
-  pointer-events: none;
-}
-
-.progress::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 0;
-  height: 5px;
-  box-shadow: -500px 0 0 500px #ffbca2;
-}
-
-.left-progress-number {
-  font-size: 24px;
-  margin-right: 20px;
-  font-family: 'Gilroy-Bold';
-}
-
-.right-progress-number {
-  font-size: 24px;
-  margin-left: 20px;
-  font-family: 'Gilroy-Bold';
-}
-
-.questions-main {
+.main {
   width: 100%;
   height: 70vh;
   min-height: 700px;
 }
 
-.questions-slider {
+.slider {
   display: flex;
   width: 200%;
   height: 100%;
@@ -53,31 +22,36 @@
   margin-left: 0;
 }
 
-.questions-slider .slide {
+.slide {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
-  width: 50%
+  width: 50%;
 }
 
-.question {
-  width: 660px;
-  display: flex;
-  flex-direction: column;
-}
 
-.question .text {
-  font-size: 24px;
-}
 
-.question .image {
-  width: 100%;
-  height: 440px;
-  background-position: center center;
-  background-size: 100% 440px;
-  border-radius: 20px;
-  margin-top: 30px;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.moved {
+  margin-left: -100%;
 }
 
 .answer-buttons-container {
@@ -135,29 +109,4 @@
   font-size: 18px;
   font-style: italic;
   color: black;
-}
-
-.variant-button,
-.next-button {
-  width: 300px;
-  height: 60px;
-  background-color: #ffbca2;
-  border-radius: 40px;
-  line-height: 56px;
-  text-align: center;
-  cursor: pointer;
-  color: black;
-}
-
-.variant-button:hover,
-.next-button:hover {
-  opacity: 0.7;
-}
-
-.variant-button {
-  margin: auto;
-}
-
-.moved {
-  margin-left: -100%;
 }
