--- a/art-quiz/src/pages/Settings/Settings.css
+++ b/art-quiz/src/pages/Settings/Settings.css
@@ -1,4 +1,4 @@
-.settings-header {
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -8,153 +8,25 @@
   padding: 0 70px;
 }
 
-.settings-main {
+.main {
   display: flex;
   flex-direction: column;
+  gap: 50px;
   width: 100%;
   height: 70vh;
   min-height: 700px;
-  padding-left: 70px;
+  padding: 70px;
 }
 
 .setting {
   display: flex;
   flex-direction: column;
-  margin-top: 56px;
+  gap: 40px;
 }
 
-.setting .header {
+.settings-header {
   font-family: 'Gilroy-Bold';
   font-size: 24px;
   color: white;
 }
-
-.volume-slider {
-  -webkit-appearance: none;
-  appearance: none;
-  overflow: hidden;
-  width: 500px;
-  height: 8px;
-  background-color: white;
-  cursor: pointer;
-  border-radius: 20px;
-  margin-top: 40px;
-}
-
-.volume-slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 8px;
-  height: 8px;
-  background-color: #ffbca2;
-  box-shadow: -500px 0 0 500px #ffbca2;
-}
-
-.toggle {
-  display: flex;
-  align-items: center;
-  margin-top: 40px;
-}
-
-.value-container {
-  width: 58px;
-}
-
-.toggle label {
-  position: relative;
-  display: inline-block;
-  width: 50px;
-  height: 24px;
-}
-
-.toggle input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slide-block {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
-}
-
-.slide-block:before {
-  position: absolute;
-  content: '';
-  height: 18px;
-  width: 18px;
-  left: 3px;
-  bottom: 3px;
-  background-color: white;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
-}
-
-input:checked + .slide-block {
-  background-color: #ffbca2;
-}
-
-input:focus + .slide-block {
-  box-shadow: 0 0 1px #ffbca2;
-}
-
-input:checked + .slide-block:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-.slide-block.round {
-  border-radius: 34px;
-}
-
-.slide-block.round:before {
-  border-radius: 50%;
-}
-
-.round-buttons-container {
-  display: flex;
-  align-items: center;
-  margin-top: 40px;
-}
-
-.round-button-plus,
-.round-button-minus {
-  width: 24px;
-  height: 24px;
-  background-size: 32px 32px;
-  background-color: white;
-  background-position: center center;
-  border-radius: 50px;
-  cursor: pointer;
-}
-
-.round-button-plus:active,
-.round-button-minus:active {
-  transform: scale(1.2);
-}
-
-.round-button-plus {
-  background-image: url('@/assets/img/plus.png');
-}
-
-.round-button-minus {
-  margin-left: 15px;
-  background-image: url('@/assets/img/minus.png');
-}
-
-.counter-container {
-  margin-left: 15px;
-  width: 30px;
-  display: flex;
-  justify-content: center;
-}
-
 
