--- a/art-quiz/src/pages/Questions/Questions.css
+++ b/art-quiz/src/pages/Questions/Questions.css
@@ -1,5 +1,7 @@
 .header {
+  position: relative;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
@@ -9,15 +11,22 @@
 }
 
 .main {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
   width: 100%;
   height: 70vh;
   min-height: 700px;
 }
 
+.timer-container {
+  text-align: center;
+}
+
 .slider {
   display: flex;
+  flex-grow: 1;
   width: 200%;
-  height: 100%;
   transition: 500ms;
   margin-left: 0;
 }
@@ -26,87 +35,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
   width: 50%;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .moved {
   margin-left: -100%;
-}
-
-.answer-buttons-container {
-  width: 100%;
-  height: 200px;
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 20px;
-}
-
-.answer {
-  height: 600px;
-  width: 460px;
-  padding: 30px;
-  border-radius: 20px;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.answer .image {
-  width: 100%;
-  height: 340px;
-  background-position: center center;
-  background-size: 100% 340px;
-  border-radius: 20px;
-}
-
-.indicator {
-  position: relative;
-  top: 260px;
-  left: 30px;
-  width: 50px;
-  height: 50px;
-  background-position: center center;
-  background-size: 50px 50px;
-  background-image: url('@/assets/svg/cross.svg');
-}
-
-.text-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.answer .name {
-  font-size: 26px;
-  font-weight: bold;
-  color: black;
-}
-
-.answer .author {
-  font-size: 18px;
-  font-style: italic;
-  color: black;
 }
