--- a/art-quiz/src/components/AuthorsQuestion/AuthorsQuestion.css
+++ b/art-quiz/src/components/AuthorsQuestion/AuthorsQuestion.css
@@ -1,15 +1,15 @@
-.question {
+.authors-question {
   display: flex;
   flex-direction: column;
   gap: 40px;
   width: 660px;
 }
 
-.question h1 {
+.authors-question h1 {
   font-size: 24px;
 }
 
-.question img {
+.authors-question img {
   width: 100%;
   height: 440px;
   background-size: 100% 100%;
