feat: add result component

--- a/art-quiz/src/components/OvalButton/OvalButton.css
+++ b/art-quiz/src/components/OvalButton/OvalButton.css
@@ -3,6 +3,7 @@
   width: 280px;
   height: 70px;
   align-items: center;
+  text-align: center;
   justify-content: center;
   background-color: #ffbca2;
   cursor: pointer;
