--- a/art-quiz/src/components/Answer/Answer.css
+++ b/art-quiz/src/components/Answer/Answer.css
@@ -3,28 +3,29 @@
   flex-direction: column;
   align-items: center;
   gap: 40px;
-  width: 460px;
-  padding: 20px;
+  width: 480px;
+  padding: 40px;
   border-radius: 20px;
   background-color: white;
 }
 
-.image {
-  width: 100%;
-  height: 340px;
+.picture {
+  width: 400px;
+  height: 320px;
   background-size: 100% 100%;
   background-position: center center;
   border-radius: 20px;
+  position: relative;
 }
 
 .indicator {
-  position: relative;
-  top: 260px;
+  position: absolute;
+  bottom: 30px;
   left: 30px;
   width: 50px;
   height: 50px;
+  background-size: 100% 100%;
   background-position: center center;
-  background-size: 50px 50px;
 }
 
 .text-container {
@@ -34,13 +35,14 @@
 }
 
 .name {
-  font-size: 26px;
-  font-weight: bold;
+  font-family: 'Gilroy-Bold';
+  font-size: 24px;
   color: black;
+  text-align: center;
 }
 
-.description {
-  font-size: 18px;
+.author-year {
   font-style: italic;
   color: black;
+  text-align: center;
 }
