--- a/art-quiz/src/components/AuthorsQuestion/AuthorsQuestion.css
+++ b/art-quiz/src/components/AuthorsQuestion/AuthorsQuestion.css
@@ -2,24 +2,24 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
-  width: 660px;
+  width: 500px;
 }
 
-.authors-question h1 {
-  font-size: 24px;
-}
-
-.authors-question img {
-  width: 100%;
-  height: 440px;
+.picture {
+  width: 500px;
+  height: 320px;
   background-size: 100% 100%;
   background-position: center center;
   border-radius: 20px;
 }
 
+.question {
+  font-size: 24px;
+  font-family: 'Gilroy-Bold';
+}
+
 .answer-buttons-container {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
 }
