--- a/art-quiz/src/components/Category/Category.css
+++ b/art-quiz/src/components/Category/Category.css
@@ -2,11 +2,9 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: fit-content;
-  height: fit-content;
 }
 
-.header {
+.header-container {
   display: flex;
   justify-content: space-between;
 }
