--- a/art-quiz/src/components/ImageButton/ImageButton.css
+++ b/art-quiz/src/components/ImageButton/ImageButton.css
@@ -1,4 +1,5 @@
 .image-button {
+  position: relative;
   width: 230px;
   height: 230px;
   background-size: 100% 100%;
@@ -9,4 +10,19 @@
 .image-button:hover {
   cursor: pointer;
   box-shadow: inset 0 0 0 1000px rgba(0, 255, 0, .4);
+}
+
+.sub-button {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #ffbca2;
+  color: black;
+  border-radius: 0px 0px 20px 20px;
+  cursor: pointer;
 }
