--- a/art-quiz/src/pages/Questions/Questions.css
+++ b/art-quiz/src/pages/Questions/Questions.css
@@ -1,13 +1,21 @@
 .header {
-  position: relative;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   width: 100%;
   height: 15vh;
   min-height: 100px;
   padding: 0 70px;
+}
+
+.progress {
+  align-items: center;
+  margin-left: auto;
+}
+
+.exit-button {
+  align-items: center;
+  margin-left: auto;
 }
 
 .main {
@@ -41,3 +49,4 @@
 .moved {
   margin-left: -100%;
 }
+
