feat: add adaptive design

--- a/art-quiz/src/components/Category/Category.css
+++ b/art-quiz/src/components/Category/Category.css
@@ -32,11 +32,10 @@
   bottom: 0;
   width: 100%;
   height: 25%;
-  padding: 0px 20px;
+  padding: 0px 10%;
   display: flex;
   align-items: center;
-  gap: 20px;
-  text-align: center;
+  gap: 10%;
   background-color: #ffbca2;
   border-radius: 0px 0px 20px 20px;
   cursor: pointer;
@@ -54,4 +53,50 @@
   color: black;
 }
 
+@media screen and (max-width: 768px) {
+  .image {
+    width: 200px;
+    height: 200px;
+  }
 
+  .header {
+    font-size: 18px;
+  }
+
+  .score {
+    font-size: 18px;
+  }
+
+  .icon {
+    width: 25px;
+    height: 25px;
+  }
+
+  .text{
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .image {
+    width: 160px;
+    height: 160px;
+  }
+
+  .header {
+    font-size: 14px;
+  }
+
+  .score {
+    font-size: 14px;
+  }
+
+  .icon {
+    width: 20px;
+    height: 20px;
+  }
+
+  .text{
+    font-size: 14px;
+  }
+}
