--- a/art-quiz/src/components/GameOver/GameOver.css
+++ b/art-quiz/src/components/GameOver/GameOver.css
@@ -1,4 +1,4 @@
-.result {
+.game-over {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,7 +42,45 @@
 
 .buttons-container {
   display: flex;
+  align-self: stretch;
+  justify-content: space-between;
   gap: 20px;
 }
 
+@media screen and (max-width: 768px) {
+  .game-over {
+    width: 420px;
+    gap: 30px;
+    padding: 30px;
+  }
 
+  .goblet {
+    width: 180px;
+    height: 180px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .game-over {
+    width: 340px;
+    gap: 20px;
+    padding: 20px;
+  }
+
+  .message {
+    font-size: 30px;
+  }
+
+  .score {
+    font-size: 64px;
+  }
+
+  .label {
+    font-size: 20px;
+  }
+
+  .goblet {
+    width: 160px;
+    height: 160px;
+  }
+}
