--- a/art-quiz/src/components/Answer/Answer.css
+++ b/art-quiz/src/components/Answer/Answer.css
@@ -10,7 +10,7 @@
 }
 
 .picture {
-  width: 400px;
+  width: 100%;
   height: 320px;
   background-size: 100% 100%;
   background-position: center center;
@@ -45,4 +45,29 @@
   font-style: italic;
   color: black;
   text-align: center;
+}
+
+
+@media screen and (max-width: 768px) {
+  .answer {
+    width: 420px;
+    gap: 30px;
+    padding: 30px;
+  }
+
+  .picture {
+    height: 280px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .answer {
+    width: 340px;
+    gap: 20px;
+    padding: 20px;
+  }
+
+  .picture {
+    height: 240px;
+  }
 }
