--- a/art-quiz/src/components/AuthorsQuestion/AuthorsQuestion.css
+++ b/art-quiz/src/components/AuthorsQuestion/AuthorsQuestion.css
@@ -6,7 +6,7 @@
 }
 
 .picture {
-  width: 500px;
+  width: 100%;
   height: 320px;
   background-size: 100% 100%;
   background-position: center center;
@@ -22,4 +22,48 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+}
+
+.answer-button-wrapper {
+  width: 240px;
+  height: 65px;
+}
+
+@media screen and (max-width: 768px) {
+  .authors-question {
+    width: 420px;
+    gap: 30px;
+  }
+
+  .picture {
+    height: 280px;
+  }
+
+  .answer-button-wrapper {
+    width: 200px;
+    height: 60px;
+  }
+
+  .answer-buttons-container {
+    gap: 15px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .authors-question {
+    width: 340px;
+    gap: 20px;
+  }
+
+  .picture {
+    height: 240px;
+  }
+
+  .answer-button-wrapper {
+    width: 160px;
+  }
+
+  .answer-buttons-container {
+    gap: 10px;
+  }
 }
