--- a/art-quiz/src/components/BigAppLogo/BigAppLogo.css
+++ b/art-quiz/src/components/BigAppLogo/BigAppLogo.css
@@ -32,3 +32,16 @@
   margin-right: 20px;
   color: #ffbca2;
 }
+
+
+@media screen and (max-width: 520px) {
+  .text span {
+    font-size: 80px;
+  }
+
+  .icon div {
+    width: 110px;
+    height: 110px;
+    margin-right: -40px;
+  }
+}
