--- a/art-quiz/src/components/Exit/Exit.css
+++ b/art-quiz/src/components/Exit/Exit.css
@@ -1,9 +1,7 @@
 .exit {
   position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
+  width: 100vw;
+  height: 100vh;
   z-index: 1;
   display: flex;
   align-items: center;
@@ -33,8 +31,31 @@
 
 .buttons-container {
   display: flex;
+  align-self: stretch;
   gap: 20px;
 }
 
+@media screen and (max-width: 768px) {
+  .popup {
+    width: 420px;
+    gap: 30px;
+    padding: 30px;
+  }
 
+  .buttons-container {
+    gap: 15px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .popup {
+    width: 340px;
+    gap: 20px;
+    padding: 30px;
+  }
+
+  .buttons-container {
+    gap: 10px;
+  }
+}
 
