--- a/art-quiz/src/components/OvalButton/OvalButton.css
+++ b/art-quiz/src/components/OvalButton/OvalButton.css
@@ -1,7 +1,8 @@
 .oval-button {
   display: flex;
-  width: 280px;
-  height: 70px;
+  width: 100%;
+  height: 100%;
+  min-height: 60px;
   align-items: center;
   text-align: center;
   justify-content: center;
