--- a/art-quiz/src/components/Progress/Progress.css
+++ b/art-quiz/src/components/Progress/Progress.css
@@ -2,13 +2,14 @@
   display: flex;
   align-items: center;
   gap: 20px;
+  width: 760px;
 }
 
 .progress input {
   -webkit-appearance: none;
   appearance: none;
   overflow: hidden;
-  width: 660px;
+  width: 100%;
   height: 5px;
   border-radius: 20px;
   background-color: white;
@@ -29,4 +30,34 @@
   width: 30px;
   font-size: 24px;
   font-family: 'Gilroy-Bold';
+}
+
+@media screen and (max-width: 1200px) {
+  .progress {
+    width: 660px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .progress {
+    width: 500px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .progress {
+    width: 400px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .progress {
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .progress {
+    width: 220px;
+  }
 }
