--- a/art-quiz/src/pages/Home/Home.css
+++ b/art-quiz/src/pages/Home/Home.css
@@ -2,10 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  width: 100%;
   height: 15vh;
-  min-height: 100px;
-  padding: 0 70px;
+  padding-right: 70px;
 }
 
 .settings-button {
@@ -23,15 +21,45 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
+  justify-content: center;
+  gap: 300px;
   width: 100%;
   height: 70vh;
-  min-height: 700px;
-  padding: 100px 0;
 }
 
 .start-buttons-container {
   display: flex;
-  gap: 200px;
+  width: 620px;
+  height: 65px;
+  gap: 100px;
+}
+
+@media screen and (max-width: 768px) {
+  .start-buttons-container {
+    gap: 40px;
+    width: 260px;
+    height: 160px;
+    flex-direction: column;
+  }
+
+  .main {
+    gap: 100px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .header {
+    padding-right: 30px;
+  }
+
+  .main {
+    gap: 80px;
+  }
+
+  .start-buttons-container {
+    gap: 30px;
+    width: 220px;
+    height: 140px;
+  }
 }
