--- a/art-quiz/src/pages/Questions/Questions.css
+++ b/art-quiz/src/pages/Questions/Questions.css
@@ -4,7 +4,6 @@
   justify-content: flex-end;
   width: 100%;
   height: 15vh;
-  min-height: 100px;
   padding: 0 70px;
 }
 
@@ -21,10 +20,8 @@
 .main {
   display: flex;
   flex-direction: column;
-  gap: 60px;
   width: 100%;
   height: 70vh;
-  min-height: 700px;
 }
 
 .time-container {
@@ -49,4 +46,11 @@
 .moved {
   margin-left: -100%;
 }
+
+@media screen and (max-width: 520px) {
+  .header {
+    padding: 0 30px;
+  }
+}
+
 
