--- a/art-quiz/src/pages/Settings/Settings.css
+++ b/art-quiz/src/pages/Settings/Settings.css
@@ -4,8 +4,7 @@
   justify-content: space-between;
   width: 100%;
   height: 15vh;
-  min-height: 100px;
-  padding: 0 70px;
+  padding-left: 70px;
 }
 
 .main {
@@ -14,8 +13,7 @@
   gap: 50px;
   width: 100%;
   height: 70vh;
-  min-height: 700px;
-  padding: 70px;
+  padding-left: 70px;
 }
 
 .setting {
@@ -28,5 +26,15 @@
   font-family: 'Gilroy-Bold';
   font-size: 24px;
   color: white;
+}
+
+@media screen and (max-width: 520px) {
+  .header {
+    padding-left: 30px;
+  }
+
+  .main {
+    padding-left: 30px;
+  }
 }
 
