--- a/art-quiz/src/styles/styles.css
+++ b/art-quiz/src/styles/styles.css
@@ -18,8 +18,6 @@
 }
 
 body {
-  min-width: 480px;
-  min-height: 100vh;
   background-color: black;
   overflow: hidden;
 }
@@ -33,8 +31,8 @@ body {
 }
 
 .slide {
-  height: 100%;
   width: 50%;
+  height: 100%;
 }
 
 .moved {
@@ -43,10 +41,8 @@ body {
 
 .fade-transition {
   position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
+  width: 100vw;
+  height: 100vh;
   z-index: 1;
   background-color: black;
   opacity: 0;
