--- a/art-quiz/src/components/Category/Category.css
+++ b/art-quiz/src/components/Category/Category.css
@@ -24,7 +24,7 @@
 
 .image:hover {
   cursor: pointer;
-  box-shadow: inset 0 0 0 1000px rgba(0, 255, 0, .4);
+  box-shadow: inset 0 0 0 1000px rgba(0, 255, 0, 0.4);
 }
 
 .rectangle {
@@ -49,7 +49,7 @@
   background-image: url('@/assets/img/reset.png');
 }
 
-.text{
+.text {
   color: black;
 }
 
@@ -72,7 +72,7 @@
     height: 25px;
   }
 
-  .text{
+  .text {
     font-size: 18px;
   }
 }
@@ -96,7 +96,7 @@
     height: 20px;
   }
 
-  .text{
+  .text {
     font-size: 14px;
   }
 }
