--- a/art-quiz/src/components/ImageButton/ImageButton.css
+++ b/art-quiz/src/components/ImageButton/ImageButton.css
@@ -9,7 +9,7 @@
 
 .image-button:hover {
   cursor: pointer;
-  box-shadow: inset 0 0 0 1000px rgba(0, 255, 0, .4);
+  box-shadow: inset 0 0 0 1000px rgba(0, 255, 0, 0.4);
 }
 
 .sub-button {
